master: generating wiki article

--- a/src/main/java/org/sa/concepts/topics/qaAndTesting.properties
+++ b/src/main/java/org/sa/concepts/topics/qaAndTesting.properties
@@ -9,7 +9,7 @@ DRT=Disaster Recovery Tests - process to prepare and test functions for actual d
 data\ pseudonymization=protecting privacy by encrypting personal indentifiers or replacing them with pseudonyms.
 PII=Personally Identifiable Information - data that can identify an individual.
 pseudonym=artificial identifier.
-error\ budget=Maximum allowable errors metric in a system within a specified time frame for reliability.
+error\ budget=maximum allowable errors metric in a system within a specified time frame for reliability.
 exploratory\ testing=flexible approach to uncover unexpected defects and understand behavior.
 feature\ flag=feature toggle.
 functional\ testing=Verifies that software features align with specified requirements.
