--- a/src/main/java/org/sa/concepts/topics/regulations.properties
+++ b/src/main/java/org/sa/concepts/topics/regulations.properties
@@ -1,6 +1,6 @@
-AFC=anti financial crime.
+AFC=Anti Financial Crime.
 DORA=Digital Operational Resilience Act - EU rules for banks to manage unforeseen data disruption incidents.
-DSS=data security standard.
+DSS=Data Security Standard.
 EDD=Enhanced Due Diligence - more thorough investigation of customer - beyond the standard KYC procedures.
 enterprise-level=scale, complexity, and requirements to meet the needs of large organizations.
 GDPR=General Data Protection Regulation - European Union regulation on information privacy.
