master: picking concept with lowest score

--- a/src/main/java/org/sa/concepts/topics/domainDrivenDesign.properties
+++ b/src/main/java/org/sa/concepts/topics/domainDrivenDesign.properties
@@ -3,9 +3,9 @@ signup\ raw\ data=core data fields: userId, username, email, registration date, 
 signup\ metadata=contextual info: registrationSource, referralCode, ipAddress, verification status.
 bounded=distinct business area, isolated from other contexts, distinct contextual meaning, independent evolution.
 bounded\ context=software unit with consistent terms, e.g., order processing in retail, payments in finance.
-bounded\ context\ example\ -\ user\ management=user registration, authentication, profile management.
-bounded\ context\ example\ -\ order\ processing=orders, payments, order statuses.
-bounded\ context\ example\ -\ inventory\ management=stock levels, suppliers, product information.
+bounded\ context\ (example\ of\ user\ management=user registration, authentication, profile management.
+bounded\ context\ (example\ of\ order\ processing=orders, payments, order statuses.
+bounded\ context\ (example\ of\ inventory\ management=stock levels, suppliers, product information.
 separation\ of\ concerns\ (DDD)=dividing system into distinct parts, each handling a specific responsibility.
 good\ separation\ of\ concerns\ (DDD)=clear, distinct parts with minimal overlap or dependencies.
 bad\ separation\ of\ concerns\ (DDD)=overlapping responsibilities causing tight coupling and confusion.
