--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,6 +1,3 @@
 #Concept key to score (1 for correct, -1 for wrong)
-#Sat May 31 23:01:01 EEST 2025
-dispose\ of\ memory=-1
-encapsulation=-2
-heap=-1
-namespace\ (networking)=1
+#Sun Jun 01 00:30:07 EEST 2025
+cluster=1
