--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,7 +1,6 @@
-#Concept key to score (1 for correct, -1 for wrong)
-#Sun Jun 01 15:20:51 EEST 2025
+heap\ space=-3
+vague=1
+cluster=1
 CDD=2
 PR=99
-cluster=1
 metadata=777
-vague=1
