master: concepts like kerberos, argo and other

--- a/src/main/java/org/sa/concepts/dictionary/generalEnglishToDefinitions.properties
+++ b/src/main/java/org/sa/concepts/dictionary/generalEnglishToDefinitions.properties
@@ -17,3 +17,4 @@ infer=draw a conclusion based on known information.
 heap=pile
 hectic=chaotic, rushed, intense; e.g., "hectic workday".
 outline=summary or main points of a topic; e.g., "outline of a project".
+NB!=Nota Bene - latin for note well. For drawing attention to an important note.
