--- a/src/main/java/org/sa/concepts/topics/backend.properties
+++ b/src/main/java/org/sa/concepts/topics/backend.properties
@@ -11,3 +11,8 @@ Azure=Microsoft cloud platform for apps, data, and services.
 Google\ Cloud=Google cloud platform for hosting, data, and AI.
 cloud\ platform=online infrastructure for hosting apps, data, and services.
 on-premises\ datacenter=organization-owned data center on-site, unlike cloud or third-party hosting.
+Kerberos=authentication protocol.
+Kerberos\ keytab\ key=encrypted, requested from authentication service using user password for target service.
+Kerberos\ keytab=file storing username, service name and key to request Kerberos tickets.
+Kerberos\ ticket=credential proving identity without sending password or keytab to service.
+Kerberos\ principal=identity containing user and service, e.g.: user@SERVICE.COM
