--- a/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
+++ b/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
@@ -19,3 +19,4 @@ artifact=built file produced by a build process, like a JAR, WAR, or binary, rea
 .war\ file=Web Application Archive - containing app, packaged and, ready for deployment.
 Ivy=dependency management tool for Java, automates retrieving libraries and modules during build or deployment.
 Ivy\ integration\ to\ Gradle=Gradle plugin for Ivy repos, allows using Ivy modules and dependencies in Gradle builds.
+Argo\ CD=Argo Continuous Delivery - deploys app from Git repo to Kubernetes cluster.
