--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -2,6 +2,7 @@
    - duplicated concepts? check for doubles
    - emDash (—) and ndash do not print well in console
    - do tests?
+   - fix concept requirements and turn to yaml
 
   ok_not_needed_to_change:
    - multiple "=" characters in the concept, because when splitting by it, it is limited to 2 parts max.
