master: concept and notes

--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -1,15 +1,14 @@
-  problems:
-   - duplicated concepts? check for doubles
-   - emDash (—) and ndash do not print well in console
-   - do tests?
-   - fix concept requirements and turn to yaml
+problems:
+  - duplicated concepts? check for doubles
+  - emDash (—) and ndash do not print well in console
+  - do tests?
+  - fix concept requirements and turn to yaml
 
-  ok_not_needed_to_change:
-   - multiple "=" characters in the concept, because when splitting by it, it is limited to 2 parts max.
+ok not needed to change: - multiple "=" characters in the concept, because when splitting by it, it is limited to 2 parts max.
 
-  how_to:
-   - update submodules:
-       - git submodule update --remote --merge
-       - then commit
-   - tone down the definitions in .concepts:
-       - ?
+how to:
+  - update submodules:
+    - git submodule update --remote --merge
+    - then commit
+  - tone down the definitions in .concepts:
+    - ?
