--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -1,10 +1,10 @@
 problems:
+  - finish how to: tone down the definitions in .concepts
   - emDash (—) and ndash do not print well in console
   - do tests?
-  - fix concept requirements and turn to yaml
-  - remember answers in csv format: - key, attempted answer, AI rating, datetime
+  - remember answers in csv format: key, attempted answer, AI rating, datetime
 
-ok not needed to change: - multiple "=" characters in the concept, because when splitting by it, it is limited to 2 parts max.
+ok, not needed to change: multiple "=" characters in the concept, because when splitting by it, it is limited to 2 parts max.
 
 how to:
   - update submodules:
