--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,16 +1,24 @@
 Java\ EE=1
 Unix=1
-cluster=1
 tamper=1
-PR=1
-metadata=1
+cluster=1
 CDD=1
+metadata=1
+PR=1
 aspect\ oriented\ programming=1
 base\ (math)=1
 roll\ out=1
+diligence=1
+VPN\ whitelisting=1
 heap\ space=1
 pivot=1
 YubiKey=1
+traverse=1
+cohesion=1
 vague=2
+Ivy=2
 due\ diligence=3
+deduce=4
+Azure=4
 runtime=5
+interface=8
