--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,3 +1,8 @@
+PV=-1
+Genesys\ Cloud=-1
+dispose\ of\ memory=-1
+JPA\ scope=-1
+directed\ graph=-1
 Java\ EE=1
 Unix=1
 tamper=1
@@ -7,6 +12,7 @@ metadata=1
 PR=1
 aspect\ oriented\ programming=1
 base\ (math)=1
+Rancher\ features=1
 roll\ out=1
 diligence=1
 VPN\ whitelisting=1
@@ -15,10 +21,20 @@ pivot=1
 YubiKey=1
 traverse=1
 cohesion=1
+reason\ for\ memory\ lack\ in\ Jenkins=1
+F5\ rules=1
+domain\ model=1
 vague=2
+synchronous=2
 Ivy=2
+container\ image=2
+usability\ testing=2
+functional\ testing=2
 due\ diligence=3
+PPTE=4
 deduce=4
 Azure=4
+stakeholder=4
+Docker=4
 runtime=5
 interface=8
