--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -5,6 +5,7 @@ entity\ management=-1
 managed\ services\ of\ Andromeda=-1
 JSP=-1
 bad\ separation\ of\ concerns\ (DDD)=-1
+onboarding=-1
 Java\ EE=1
 Unix=1
 tamper=1
