master: fixed null keys, that has score; learning

--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,13 +1,12 @@
 PV=-2
-JPA\ scope=-2
 Genesys\ Cloud=-2
-entity\ management=-1
-managed\ services\ of\ Andromeda=-1
-JSP=-1
-bad\ separation\ of\ concerns\ (DDD)=-1
-onboarding=-1
-Java\ EE=1
+allocate\ a\ list=-1
+XSS=-1
+separation\ of\ concerns\ (DDD)=-1
+bounded\ context=-1
+VIP\ (OpenShift)=-1
 Unix=1
+Java\ EE=1
 tamper=1
 cluster=1
 CDD=1
@@ -16,32 +15,38 @@ PR=1
 aspect\ oriented\ programming=1
 base\ (math)=1
 Rancher\ features=1
-roll\ out=1
 diligence=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
 F5\ rules=1
-VPN\ whitelisting=1
 domain\ model=1
-heap\ space=1
 pivot=1
 YubiKey=1
 test\ pilot=1
 AD=1
 traverse=1
 cohesion=1
+roll\ out=1
+VPN\ whitelisting=1
+asynchronous=1
+heap\ space=1
+onboarding=1
+subsetting\ data=1
+CTO=1
 vague=2
 synchronous=2
-Ivy=2
 container\ image=2
 usability\ testing=2
 functional\ testing=2
 sticky\ session\ benefit=2
+signup\ metadata=2
+Ivy=2
 due\ diligence=3
 dispose\ of\ memory=3
 stakeholder=4
-PPTE=4
 Docker=4
-deduce=4
 Azure=4
+PPTE=4
+deduce=4
+greedy\ solution=4
 runtime=5
 interface=8
