--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,10 +1,12 @@
 PV=-2
 Genesys\ Cloud=-2
+SLI=-1
 allocate\ a\ list=-1
+VIP\ (OpenShift)=-1
 XSS=-1
 separation\ of\ concerns\ (DDD)=-1
 bounded\ context=-1
-VIP\ (OpenShift)=-1
+DPIA=-1
 Unix=1
 Java\ EE=1
 tamper=1
@@ -45,8 +47,8 @@ dispose\ of\ memory=3
 stakeholder=4
 Docker=4
 Azure=4
+greedy\ solution=4
 PPTE=4
 deduce=4
-greedy\ solution=4
 runtime=5
 interface=8
