--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,12 +1,10 @@
 PV=-3
-XSS=-2
 DPIA=-2
-VIP\ (OpenShift)=-2
 SLI=-2
-allocate\ a\ list=1
-bounded\ context=1
-Java\ EE=1
+VIP\ (OpenShift)=-2
+XSS=-2
 Unix=1
+Java\ EE=1
 tamper=1
 cluster=1
 CDD=1
@@ -22,6 +20,7 @@ domain\ model=1
 pivot=1
 YubiKey=1
 test\ pilot=1
+allocate\ a\ list=1
 AD=1
 traverse=1
 cohesion=1
@@ -31,6 +30,7 @@ asynchronous=1
 heap\ space=1
 onboarding=1
 subsetting\ data=1
+bounded\ context=1
 CTO=1
 vague=2
 synchronous=2
@@ -48,5 +48,6 @@ Azure=4
 greedy\ solution=4
 PPTE=4
 deduce=4
+thoroughness=4
 runtime=5
 interface=8
