master: concepts and learning

--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -3,15 +3,20 @@ DPIA=-2
 SLI=-2
 VIP\ (OpenShift)=-2
 XSS=-2
+base\ Java\ Docker\ image=-1
+MLM=-1
+integrated\ test\ environment=-1
+paradigm=-1
+semantic\ registration\ message=-1
 Java\ EE=1
 Unix=1
 tamper=1
 cluster=1
-PR=1
-metadata=1
 CDD=1
-base\ (math)=1
+metadata=1
+PR=1
 aspect\ oriented\ programming=1
+base\ (math)=1
 Rancher\ features=1
 diligence=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
@@ -25,21 +30,27 @@ AD=1
 traverse=1
 cohesion=1
 roll\ out=1
+.war\ file=1
 VPN\ whitelisting=1
 asynchronous=1
 heap\ space=1
 onboarding=1
 subsetting\ data=1
 bounded\ context=1
+framework=1
 CTO=1
+DC=1
 vague=2
+encapsulation=2
 synchronous=2
 container\ image=2
 usability\ testing=2
 functional\ testing=2
 sticky\ session\ benefit=2
+dispose=2
 signup\ metadata=2
 Ivy=2
+tampering=2
 due\ diligence=3
 dispose\ of\ memory=3
 stakeholder=4
@@ -49,5 +60,6 @@ greedy\ solution=4
 thoroughness=4
 PPTE=4
 deduce=4
+fetch=4
 runtime=5
 interface=8
