--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,13 +1,18 @@
-PV=-3
-DPIA=-2
-SLI=-2
-VIP\ (OpenShift)=-2
-XSS=-2
 base\ Java\ Docker\ image=-1
+DPIA=-1
+PV=-1
 MLM=-1
+exploratory\ testing=-1
+streamline=-1
 integrated\ test\ environment=-1
+XSS=-1
+data\ flow=-1
 paradigm=-1
 semantic\ registration\ message=-1
+chaos\ engineering=-1
+GCT=-1
+good\ cohesion\ for\ DocManager=-1
+port=-1
 Java\ EE=1
 Unix=1
 tamper=1
@@ -29,6 +34,7 @@ allocate\ a\ list=1
 AD=1
 traverse=1
 cohesion=1
+Spring\ boot=1
 roll\ out=1
 .war\ file=1
 VPN\ whitelisting=1
@@ -38,8 +44,11 @@ onboarding=1
 subsetting\ data=1
 bounded\ context=1
 framework=1
+gateway\ team=1
 CTO=1
 DC=1
+cloud\ platform=1
+RESTful\ data\ formats=1
 vague=2
 encapsulation=2
 synchronous=2
@@ -50,7 +59,11 @@ sticky\ session\ benefit=2
 dispose=2
 signup\ metadata=2
 Ivy=2
+OpenShift=2
 tampering=2
+to\ stash=2
+hashing=2
+canary\ deployment=2
 due\ diligence=3
 dispose\ of\ memory=3
 stakeholder=4
@@ -61,5 +74,7 @@ thoroughness=4
 PPTE=4
 deduce=4
 fetch=4
+JSP=4
+throttling=4
 runtime=5
 interface=8
