master: fixed WikiExporter

--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -1,7 +1,7 @@
 problems:
   - unit tests:
     -
-  - test WikiExporter app if still functional after
+  - WikiExporter should export both general and (general and swed)
   - remove code from Concepts constructor:
       - initialize global objects straight with methods containing what is in constructor now.
 
