--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,18 +1,15 @@
-base\ Java\ Docker\ image=-1
-DPIA=-1
-PV=-1
-MLM=-1
-exploratory\ testing=-1
-streamline=-1
-integrated\ test\ environment=-1
 port=-1
-XSS=-1
-data\ flow=-1
-paradigm=-1
-semantic\ registration\ message=-1
 good\ cohesion\ for\ DocManager=-1
-chaos\ engineering=-1
 GCT=-1
+good\ cohesion\ (DDD)=-1
+Wireshark=-1
+coupling=-1
+hub=-1
+JPA=-1
+MLM=1
+streamline=1
+exploratory\ testing=1
+base\ Java\ Docker\ image=1
 Java\ EE=1
 Unix=1
 tamper=1
@@ -49,6 +46,8 @@ framework=1
 gateway\ team=1
 CTO=1
 DC=1
+firewall=1
+DRT=1
 vague=2
 encapsulation=2
 canary\ deployment=2
@@ -64,6 +63,14 @@ signup\ metadata=2
 Ivy=2
 OpenShift=2
 tampering=2
+on-premises\ datacenter=2
+obfuscate\ data=2
+justified\ vs\ excusable=2
+NOT\ IN\ (SQL)=2
+paradigm=3
+integrated\ test\ environment=3
+XSS=3
+DPIA=3
 due\ diligence=3
 dispose\ of\ memory=3
 stakeholder=4
