--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,13 +1,10 @@
-coupling=-1
-good\ cohesion\ (DDD)=-1
-port=-1
-JPA=-1
-Wireshark=-1
-good\ cohesion\ for\ DocManager=-1
-hub=-1
-GCT=-1
-Java\ EE=1
+deque=-1
+ICT\ system\ components=-1
+secret\ (Kubernetes)=-1
+ubiquitous\ language=-1
+master\ node=-1
 Unix=1
+Java\ EE=1
 tamper=1
 cluster=1
 base\ Java\ Docker\ image=1
@@ -41,6 +38,7 @@ heap\ space=1
 RESTful\ data\ formats=1
 onboarding=1
 subsetting\ data=1
+Wireshark=1
 bounded\ context=1
 cloud\ platform=1
 framework=1
@@ -48,6 +46,12 @@ firewall=1
 gateway\ team=1
 CTO=1
 DC=1
+DDoS\ attacks=1
+bounded\ context\ (example\ of\ inventory\ management)=1
+DevOps=1
+Helm=1
+RESTful=1
+Argo\ CD=1
 vague=2
 encapsulation=2
 canary\ deployment=2
@@ -67,6 +71,10 @@ NOT\ IN\ (SQL)=2
 justified\ vs\ excusable=2
 tampering=2
 on-premises\ datacenter=2
+CI/CD=2
+web\ portal=2
+partition\ and\ sample=2
+port=3
 due\ diligence=3
 DPIA=3
 dispose\ of\ memory=3
@@ -83,5 +91,6 @@ throttling=4
 PPTE=4
 deduce=4
 fetch=4
+suite=4
 runtime=5
 interface=8
