--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -4,6 +4,7 @@ problems:
   - exportAllConceptsForWikiPage should have helper
   - test wiki exporter // try to upload to wiki
   - wiki should not make (-) to emoji
+  - in the ai response, print score in another color.
   - remove code from Concepts constructor:
       - initialize global objects straight with methods containing what is in constructor now.
 
