--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -3,13 +3,17 @@ ICT\ system\ components=-1
 secret\ (Kubernetes)=-1
 master\ node=-1
 ubiquitous\ language=-1
+TDM=-1
+CFT=-1
+CTE\ (SQL)=-1
+database\ transactions=-1
 tamper=1
 cluster=1
 CDD=1
 metadata=1
 PR=1
-aspect\ oriented\ programming=1
 base\ (math)=1
+aspect\ oriented\ programming=1
 Rancher\ features=1
 diligence=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
@@ -35,8 +39,8 @@ firewall=1
 Helm=1
 gateway\ team=1
 DC=1
-Java\ EE=1
 Unix=1
+Java\ EE=1
 base\ Java\ Docker\ image=1
 DRT=1
 MLM=1
@@ -52,6 +56,8 @@ asynchronous=1
 heap\ space=1
 subsetting\ data=1
 CTO=1
+namespace\ (networking)=1
+postmortem=1
 vague=2
 encapsulation=2
 synchronous=2
@@ -74,6 +80,9 @@ OpenShift=2
 NOT\ IN\ (SQL)=2
 partition\ and\ sample=2
 on-premises\ datacenter=2
+microservice=2
+JPA\ entity\ management=2
+RESTful\ layers=2
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
@@ -92,5 +101,7 @@ Azure=4
 greedy\ solution=4
 throttling=4
 deduce=4
+CTE\ (sandbox)=4
+infer=4
 runtime=5
 interface=8
