master: highlighted evaluation part in the AI answer

--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,17 +1,18 @@
 deque=-1
+database\ transactions=-1
 ICT\ system\ components=-1
 secret\ (Kubernetes)=-1
 master\ node=-1
+CFT=-1
 ubiquitous\ language=-1
 TDM=-1
-CFT=-1
 CTE\ (SQL)=-1
-database\ transactions=-1
+exponent\ (math)=-1
 tamper=1
 cluster=1
-CDD=1
-metadata=1
 PR=1
+metadata=1
+CDD=1
 base\ (math)=1
 aspect\ oriented\ programming=1
 Rancher\ features=1
@@ -26,6 +27,7 @@ RESTful=1
 allocate\ a\ list=1
 AD=1
 Argo\ CD=1
+postmortem=1
 roll\ out=1
 .war\ file=1
 RESTful\ data\ formats=1
@@ -39,9 +41,10 @@ firewall=1
 Helm=1
 gateway\ team=1
 DC=1
-Unix=1
 Java\ EE=1
+Unix=1
 base\ Java\ Docker\ image=1
+cohesion\ (DDD)=1
 DRT=1
 MLM=1
 DDoS\ attacks=1
@@ -49,15 +52,16 @@ YubiKey=1
 streamline=1
 traverse=1
 DevOps=1
+namespace\ (networking)=1
 cohesion=1
 Spring\ boot=1
 VPN\ whitelisting=1
 asynchronous=1
 heap\ space=1
 subsetting\ data=1
+API=1
 CTO=1
-namespace\ (networking)=1
-postmortem=1
+regression\ testing=1
 vague=2
 encapsulation=2
 synchronous=2
@@ -66,9 +70,13 @@ usability\ testing=2
 functional\ testing=2
 sticky\ session\ benefit=2
 obfuscate\ data=2
+RESTful\ layers=2
 web\ portal=2
+microservice=2
 justified\ vs\ excusable=2
+deploying=2
 CI/CD=2
+JPA\ entity\ management=2
 tampering=2
 canary\ deployment=2
 hashing=2
@@ -80,9 +88,6 @@ OpenShift=2
 NOT\ IN\ (SQL)=2
 partition\ and\ sample=2
 on-premises\ datacenter=2
-microservice=2
-JPA\ entity\ management=2
-RESTful\ layers=2
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
@@ -98,10 +103,10 @@ PPTE=4
 suite=4
 fetch=4
 Azure=4
-greedy\ solution=4
+infer=4
 throttling=4
 deduce=4
 CTE\ (sandbox)=4
-infer=4
 runtime=5
+greedy\ solution=8
 interface=8
