--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -2,6 +2,7 @@ problems:
   - unit tests:
     -
   - in the ai response, print score in another color.
+  - printConceptWithFragmentHighlighted test if ok
   - remove code from Concepts constructor:
       - initialize global objects straight with methods containing what is in constructor now.
 
