--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,13 +1,9 @@
-deque=-1
-database\ transactions=-1
-ICT\ system\ components=-1
-secret\ (Kubernetes)=-1
-master\ node=-1
-CFT=-1
-ubiquitous\ language=-1
-TDM=-1
-CTE\ (SQL)=-1
-exponent\ (math)=-1
+TDM=-2
+bad\ cohesion\ (DDD)=-1
+servlet\ container=-1
+garbage\ collection=-1
+PII=-1
+database\ transactions=1
 tamper=1
 cluster=1
 PR=1
@@ -55,13 +51,19 @@ DevOps=1
 namespace\ (networking)=1
 cohesion=1
 Spring\ boot=1
+regression\ testing=1
 VPN\ whitelisting=1
 asynchronous=1
 heap\ space=1
 subsetting\ data=1
 API=1
 CTO=1
-regression\ testing=1
+to\ prompt=1
+throughput=1
+unit\ testing=1
+object\ mapping\ (database)=1
+security\ testing=1
+facility=1
 vague=2
 encapsulation=2
 synchronous=2
@@ -88,6 +90,9 @@ OpenShift=2
 NOT\ IN\ (SQL)=2
 partition\ and\ sample=2
 on-premises\ datacenter=2
+edge\ (graphs)=2
+hub=2
+bad\ separation\ of\ concerns\ (DDD)=2
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
@@ -107,6 +112,9 @@ infer=4
 throttling=4
 deduce=4
 CTE\ (sandbox)=4
+git\ stash=4
+dispose\ of\ a\ list=4
+abstract\ class=4
 runtime=5
 greedy\ solution=8
 interface=8
