--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,8 +1,12 @@
-TDM=-2
 servlet\ container=-1
 PII=-1
 bad\ cohesion\ (DDD)=-1
 garbage\ collection=-1
+provisioning=-1
+commissioning=-1
+OKR=-1
+Kerberos\ keytab\ key=-1
+ubiquitous=-1
 tamper=1
 cluster=1
 PR=1
@@ -64,6 +68,7 @@ heap\ space=1
 subsetting\ data=1
 API=1
 CTO=1
+TDM=2
 vague=2
 encapsulation=2
 synchronous=2
@@ -93,6 +98,8 @@ NOT\ IN\ (SQL)=2
 hub=2
 partition\ and\ sample=2
 on-premises\ datacenter=2
+integrity\ (of\ documents)=2
+worker\ node=2
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
