--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -4,13 +4,20 @@ commissioning=-2
 PII=-2
 provisioning=-2
 OKR=-2
+stop\ word\ filtering=-1
+proxy\ pattern=-1
+NFC=-1
+Bean\ factory/\ Application\ context=-1
+CFT\ (company\ structure)=-1
+Agile\ Test\ Quadrants=-1
+operational\ risk=-1
 tamper=1
 cluster=1
 PR=1
 metadata=1
 CDD=1
-base\ (math)=1
 aspect\ oriented\ programming=1
+base\ (math)=1
 Rancher\ features=1
 diligence=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
@@ -20,32 +27,39 @@ domain\ model=1
 pivot=1
 test\ pilot=1
 database\ transactions=1
+Logread=1
 RESTful=1
 allocate\ a\ list=1
 AD=1
+value\ stream=1
 Argo\ CD=1
 postmortem=1
 roll\ out=1
 .war\ file=1
+container\ management\ platform=1
 RESTful\ data\ formats=1
 onboarding=1
 Wireshark=1
 bounded\ context\ (example\ of\ inventory\ management)=1
 bounded\ context=1
+error\ budget=1
 cloud\ platform=1
 framework=1
 firewall=1
 Helm=1
-gateway\ team=1
 facility=1
+gateway\ team=1
 DC=1
-Unix=1
 Java\ EE=1
+Unix=1
 base\ Java\ Docker\ image=1
 cohesion\ (DDD)=1
 DRT=1
 unit\ testing=1
+DRY=1
+YAML=1
 MLM=1
+Kerberos=1
 DDoS\ attacks=1
 security\ testing=1
 YubiKey=1
@@ -56,47 +70,64 @@ to\ prompt=1
 traverse=1
 DevOps=1
 namespace\ (networking)=1
+entity\ (database)=1
+continuous\ integration\ components=1
 cohesion=1
 Spring\ boot=1
 ubiquitous=1
+performance\ testing=1
 regression\ testing=1
 garbage\ collection=1
 VPN\ whitelisting=1
 asynchronous=1
 object\ mapping\ (database)=1
 heap\ space=1
+JDBC=1
 subsetting\ data=1
+collision\ resistant=1
 API=1
+JPA\ responsibilities=1
 CTO=1
+bounded\ context\ (example\ of\ order\ processing)=1
 vague=2
 encapsulation=2
 synchronous=2
 container\ image=2
 usability\ testing=2
 functional\ testing=2
+Kafka\ vs\ Kubernetes=2
 sticky\ session\ benefit=2
+PV\ (containerisation)=2
 bad\ separation\ of\ concerns\ (DDD)=2
 obfuscate\ data=2
 RESTful\ layers=2
 integrity\ (of\ documents)=2
 web\ portal=2
+domain=2
 edge\ (graphs)=2
 microservice=2
+product\ backlog\ (agile)=2
 justified\ vs\ excusable=2
+RESTful\ client-server=2
 worker\ node=2
 deploying=2
+bounded\ context\ (example\ of\ user\ management)=2
 CI/CD=2
 JPA\ entity\ management=2
 tampering=2
 canary\ deployment=2
 hashing=2
 to\ stash=2
+collision=2
 dispose=2
+IoC=2
 signup\ metadata=2
+feature\ flag=2
 Ivy=2
 OpenShift=2
 NOT\ IN\ (SQL)=2
 TDM=2
+test\ data\ management\ for\ enterprise=2
 hub=2
 partition\ and\ sample=2
 on-premises\ datacenter=2
@@ -108,17 +139,24 @@ port=3
 XSS=3
 paradigm=3
 stakeholder=4
+present()\ (Fluentlenium)=4
 abstract\ class=4
 Docker=4
 JSP=4
 thoroughness=4
+master\ node=4
 PPTE=4
+penetration\ testing=4
 suite=4
 fetch=4
+technical\ debt=4
 Azure=4
+bounded=4
 infer=4
+pseudonym=4
 dispose\ of\ a\ list=4
 throttling=4
+outdegree=4
 deduce=4
 CTE\ (sandbox)=4
 git\ stash=4
