--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,23 +1,21 @@
-servlet\ container=-2
-Kerberos\ keytab\ key=-2
-commissioning=-2
-PII=-2
-provisioning=-2
-OKR=-2
-stop\ word\ filtering=-1
-proxy\ pattern=-1
-NFC=-1
-Bean\ factory/\ Application\ context=-1
-CFT\ (company\ structure)=-1
-Agile\ Test\ Quadrants=-1
-operational\ risk=-1
+servlet\ container=-3
+Kerberos\ keytab\ key=-3
+commissioning=-3
+provisioning=-3
+stop\ word\ filtering=-2
+operational\ risk=-2
+proxy\ pattern=-2
+Bean\ factory/\ Application\ context=-2
+Agile\ Test\ Quadrants=-2
+PII=-1
+NFC=1
 tamper=1
 cluster=1
-PR=1
-metadata=1
 CDD=1
-aspect\ oriented\ programming=1
+metadata=1
+PR=1
 base\ (math)=1
+aspect\ oriented\ programming=1
 Rancher\ features=1
 diligence=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
@@ -36,8 +34,8 @@ Argo\ CD=1
 postmortem=1
 roll\ out=1
 .war\ file=1
-container\ management\ platform=1
 RESTful\ data\ formats=1
+container\ management\ platform=1
 onboarding=1
 Wireshark=1
 bounded\ context\ (example\ of\ inventory\ management)=1
@@ -47,16 +45,17 @@ cloud\ platform=1
 framework=1
 firewall=1
 Helm=1
-facility=1
 gateway\ team=1
+facility=1
 DC=1
-Java\ EE=1
 Unix=1
+Java\ EE=1
 base\ Java\ Docker\ image=1
 cohesion\ (DDD)=1
 DRT=1
 unit\ testing=1
 DRY=1
+bounded\ context\ (example\ of\ order\ processing)=1
 YAML=1
 MLM=1
 Kerberos=1
@@ -64,6 +63,7 @@ DDoS\ attacks=1
 security\ testing=1
 YubiKey=1
 throughput=1
+observability=1
 bad\ cohesion\ (DDD)=1
 streamline=1
 to\ prompt=1
@@ -88,7 +88,7 @@ collision\ resistant=1
 API=1
 JPA\ responsibilities=1
 CTO=1
-bounded\ context\ (example\ of\ order\ processing)=1
+good\ cohesion\ (DDD)=1
 vague=2
 encapsulation=2
 synchronous=2
@@ -109,6 +109,7 @@ microservice=2
 product\ backlog\ (agile)=2
 justified\ vs\ excusable=2
 RESTful\ client-server=2
+verbose=2
 worker\ node=2
 deploying=2
 bounded\ context\ (example\ of\ user\ management)=2
@@ -118,7 +119,9 @@ tampering=2
 canary\ deployment=2
 hashing=2
 to\ stash=2
+memoization=2
 collision=2
+backlog=2
 dispose=2
 IoC=2
 signup\ metadata=2
@@ -127,10 +130,14 @@ Ivy=2
 OpenShift=2
 NOT\ IN\ (SQL)=2
 TDM=2
+Spring\ beans=2
 test\ data\ management\ for\ enterprise=2
 hub=2
 partition\ and\ sample=2
+OKR=2
 on-premises\ datacenter=2
+irreversible\ data\ transformation=2
+VPN=2
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
@@ -161,5 +168,6 @@ deduce=4
 CTE\ (sandbox)=4
 git\ stash=4
 runtime=5
+CFT\ (context\:\ company\ structure)=8
 greedy\ solution=8
 interface=8
