--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,13 +1,8 @@
-servlet\ container=-3
-Kerberos\ keytab\ key=-3
-commissioning=-3
-provisioning=-3
-stop\ word\ filtering=-2
-operational\ risk=-2
-proxy\ pattern=-2
-Bean\ factory/\ Application\ context=-2
-Agile\ Test\ Quadrants=-2
-PII=-1
+servlet\ container=-4
+provisioning=-2
+commissioning=-2
+Kerberos\ keytab\ key=-1
+JPQL=-1
 tamper=1
 cluster=1
 CDD=1
@@ -89,6 +84,8 @@ collision\ resistant=1
 API=1
 JPA\ responsibilities=1
 CTO=1
+stop\ word\ filtering=2
+proxy\ pattern=2
 vague=2
 encapsulation=2
 synchronous=2
@@ -138,6 +135,7 @@ hub=2
 partition\ and\ sample=2
 OKR=2
 on-premises\ datacenter=2
+PII=3
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
