--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,15 +1,15 @@
-servlet\ container=-4
-provisioning=-2
-commissioning=-2
-Kerberos\ keytab\ key=-1
-JPQL=-1
+servlet\ container=-5
+JPQL=-2
+provisioning=-1
+NFS=-1
+operations\ specialist=-1
 tamper=1
 cluster=1
 CDD=1
 metadata=1
 PR=1
-base\ (math)=1
 aspect\ oriented\ programming=1
+base\ (math)=1
 Rancher\ features=1
 diligence=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
@@ -28,8 +28,8 @@ Argo\ CD=1
 postmortem=1
 roll\ out=1
 .war\ file=1
-RESTful\ data\ formats=1
 container\ management\ platform=1
+RESTful\ data\ formats=1
 onboarding=1
 Wireshark=1
 bounded\ context\ (example\ of\ inventory\ management)=1
@@ -39,11 +39,11 @@ cloud\ platform=1
 framework=1
 firewall=1
 Helm=1
-gateway\ team=1
 facility=1
+gateway\ team=1
 DC=1
-Unix=1
 Java\ EE=1
+Unix=1
 base\ Java\ Docker\ image=1
 cohesion\ (DDD)=1
 DRT=1
@@ -68,8 +68,8 @@ DevOps=1
 namespace\ (networking)=1
 entity\ (database)=1
 continuous\ integration\ components=1
-cohesion=1
 Spring\ boot=1
+cohesion=1
 ubiquitous=1
 performance\ testing=1
 regression\ testing=1
@@ -84,8 +84,9 @@ collision\ resistant=1
 API=1
 JPA\ responsibilities=1
 CTO=1
-stop\ word\ filtering=2
-proxy\ pattern=2
+abstraction\ examples=1
+retrieve=1
+semantic\ registration\ message=1
 vague=2
 encapsulation=2
 synchronous=2
@@ -102,6 +103,7 @@ integrity\ (of\ documents)=2
 web\ portal=2
 domain=2
 edge\ (graphs)=2
+stop\ word\ filtering=2
 microservice=2
 product\ backlog\ (agile)=2
 justified\ vs\ excusable=2
@@ -113,6 +115,7 @@ bounded\ context\ (example\ of\ user\ management)=2
 CI/CD=2
 JPA\ entity\ management=2
 tampering=2
+proxy\ pattern=2
 canary\ deployment=2
 hashing=2
 to\ stash=2
@@ -135,9 +138,12 @@ hub=2
 partition\ and\ sample=2
 OKR=2
 on-premises\ datacenter=2
-PII=3
+Agile\ Test\ Quadrants=2
+jar\ hell=2
+coupling\ (noun)\ (software)=2
 due\ diligence=3
 dispose\ of\ memory=3
+PII=3
 DPIA=3
 integrated\ test\ environment=3
 port=3
@@ -165,6 +171,8 @@ outdegree=4
 deduce=4
 CTE\ (sandbox)=4
 git\ stash=4
+accessibility\ testing=4
+WoW=4
 runtime=5
 CFT\ (context\:\ company\ structure)=8
 greedy\ solution=8
