--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,15 +1,16 @@
 servlet\ container=-5
 JPQL=-2
-provisioning=-1
 NFS=-1
+connection\ protection\ (examples)=-1
 operations\ specialist=-1
+provisioning=-1
 tamper=1
 cluster=1
 CDD=1
 metadata=1
 PR=1
-aspect\ oriented\ programming=1
 base\ (math)=1
+aspect\ oriented\ programming=1
 Rancher\ features=1
 diligence=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
@@ -28,22 +29,24 @@ Argo\ CD=1
 postmortem=1
 roll\ out=1
 .war\ file=1
-container\ management\ platform=1
 RESTful\ data\ formats=1
+container\ management\ platform=1
 onboarding=1
 Wireshark=1
 bounded\ context\ (example\ of\ inventory\ management)=1
 bounded\ context=1
 error\ budget=1
+abstraction\ examples=1
 cloud\ platform=1
+token=1
 framework=1
 firewall=1
 Helm=1
-facility=1
 gateway\ team=1
+facility=1
 DC=1
-Java\ EE=1
 Unix=1
+Java\ EE=1
 base\ Java\ Docker\ image=1
 cohesion\ (DDD)=1
 DRT=1
@@ -68,11 +71,13 @@ DevOps=1
 namespace\ (networking)=1
 entity\ (database)=1
 continuous\ integration\ components=1
+retrieve=1
 Spring\ boot=1
 cohesion=1
 ubiquitous=1
 performance\ testing=1
 regression\ testing=1
+semantic\ registration\ message=1
 garbage\ collection=1
 VPN\ whitelisting=1
 asynchronous=1
@@ -84,9 +89,11 @@ collision\ resistant=1
 API=1
 JPA\ responsibilities=1
 CTO=1
-abstraction\ examples=1
-retrieve=1
-semantic\ registration\ message=1
+Hungarian\ pollution=1
+DevSecOps=1
+credential\ examples=1
+defensive\ programming=1
+JPA=1
 vague=2
 encapsulation=2
 synchronous=2
@@ -127,20 +134,21 @@ dispose=2
 IoC=2
 signup\ metadata=2
 feature\ flag=2
+coupling\ (noun)\ (software)=2
 Ivy=2
 VPN=2
 OpenShift=2
+jar\ hell=2
 NOT\ IN\ (SQL)=2
 TDM=2
 Spring\ beans=2
 test\ data\ management\ for\ enterprise=2
 hub=2
+Agile\ Test\ Quadrants=2
 partition\ and\ sample=2
 OKR=2
 on-premises\ datacenter=2
-Agile\ Test\ Quadrants=2
-jar\ hell=2
-coupling\ (noun)\ (software)=2
+credential=2
 due\ diligence=3
 dispose\ of\ memory=3
 PII=3
@@ -151,6 +159,7 @@ XSS=3
 paradigm=3
 stakeholder=4
 present()\ (Fluentlenium)=4
+accessibility\ testing=4
 abstract\ class=4
 Docker=4
 JSP=4
@@ -158,6 +167,7 @@ thoroughness=4
 master\ node=4
 PPTE=4
 penetration\ testing=4
+WoW=4
 suite=4
 fetch=4
 technical\ debt=4
@@ -171,8 +181,6 @@ outdegree=4
 deduce=4
 CTE\ (sandbox)=4
 git\ stash=4
-accessibility\ testing=4
-WoW=4
 runtime=5
 CFT\ (context\:\ company\ structure)=8
 greedy\ solution=8
