--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,9 +1,8 @@
-servlet\ container=-5
-JPQL=-2
-NFS=-1
+servlet\ container=-3
+JSX=-1
+IMDG=-1
 connection\ protection\ (examples)=-1
-operations\ specialist=-1
-provisioning=-1
+component\ scanning=-1
 tamper=1
 cluster=1
 CDD=1
@@ -27,8 +26,10 @@ AD=1
 value\ stream=1
 Argo\ CD=1
 postmortem=1
+Hungarian\ pollution=1
 roll\ out=1
 .war\ file=1
+credential\ examples=1
 RESTful\ data\ formats=1
 container\ management\ platform=1
 onboarding=1
@@ -41,6 +42,7 @@ cloud\ platform=1
 token=1
 framework=1
 firewall=1
+DevSecOps=1
 Helm=1
 gateway\ team=1
 facility=1
@@ -59,6 +61,7 @@ MLM=1
 Kerberos=1
 DDoS\ attacks=1
 security\ testing=1
+NFS=1
 YubiKey=1
 throughput=1
 observability=1
@@ -72,6 +75,7 @@ namespace\ (networking)=1
 entity\ (database)=1
 continuous\ integration\ components=1
 retrieve=1
+JPA=1
 Spring\ boot=1
 cohesion=1
 ubiquitous=1
@@ -84,22 +88,20 @@ asynchronous=1
 object\ mapping\ (database)=1
 heap\ space=1
 JDBC=1
+defensive\ programming=1
 subsetting\ data=1
 collision\ resistant=1
+REST=1
 API=1
 JPA\ responsibilities=1
 CTO=1
-Hungarian\ pollution=1
-DevSecOps=1
-credential\ examples=1
-defensive\ programming=1
-JPA=1
 vague=2
 encapsulation=2
 synchronous=2
 container\ image=2
 usability\ testing=2
 functional\ testing=2
+credential=2
 Kafka\ vs\ Kubernetes=2
 sticky\ session\ benefit=2
 PV\ (containerisation)=2
@@ -148,7 +150,6 @@ Agile\ Test\ Quadrants=2
 partition\ and\ sample=2
 OKR=2
 on-premises\ datacenter=2
-credential=2
 due\ diligence=3
 dispose\ of\ memory=3
 PII=3
