--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,78 +1,95 @@
 servlet\ container=-3
 JSX=-1
 IMDG=-1
-connection\ protection\ (examples)=-1
 component\ scanning=-1
-tamper=1
+proprietary=-1
+compatibility\ testing=-1
 cluster=1
-CDD=1
-metadata=1
+tamper=1
 PR=1
+metadata=1
+CDD=1
 base\ (math)=1
 aspect\ oriented\ programming=1
 Rancher\ features=1
 diligence=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
-exploratory\ testing=1
 F5\ rules=1
 domain\ model=1
 pivot=1
 test\ pilot=1
-database\ transactions=1
-Logread=1
-RESTful=1
-allocate\ a\ list=1
 AD=1
-value\ stream=1
 Argo\ CD=1
-postmortem=1
 Hungarian\ pollution=1
-roll\ out=1
+pod=1
 .war\ file=1
 credential\ examples=1
 RESTful\ data\ formats=1
 container\ management\ platform=1
-onboarding=1
+aspect=1
 Wireshark=1
-bounded\ context\ (example\ of\ inventory\ management)=1
-bounded\ context=1
 error\ budget=1
-abstraction\ examples=1
+bounded\ context=1
 cloud\ platform=1
-token=1
-framework=1
-firewall=1
-DevSecOps=1
-Helm=1
 gateway\ team=1
-facility=1
 DC=1
-Unix=1
-Java\ EE=1
 base\ Java\ Docker\ image=1
 cohesion\ (DDD)=1
-DRT=1
-unit\ testing=1
-NFC=1
-DRY=1
+ICT\ system\ (components)=1
 bounded\ context\ (example\ of\ order\ processing)=1
+JETTY=1
 YAML=1
 MLM=1
 Kerberos=1
 DDoS\ attacks=1
+throughput=1
+bad\ cohesion\ (DDD)=1
+good\ cohesion\ (DDD)=1
+to\ prompt=1
+entity\ (database)=1
+regression\ testing=1
+garbage\ collection=1
+heap\ space=1
+defensive\ programming=1
+JDBC=1
+subsetting\ data=1
+deque=1
+exploratory\ testing=1
+database\ transactions=1
+Logread=1
+RESTful=1
+allocate\ a\ list=1
+value\ stream=1
+postmortem=1
+data\ flow=1
+roll\ out=1
+onboarding=1
+ECB=1
+bounded\ context\ (example\ of\ inventory\ management)=1
+abstraction\ examples=1
+token=1
+framework=1
+assess=1
+firewall=1
+DevSecOps=1
+Helm=1
+facility=1
+Unix=1
+Java\ EE=1
+subnet=1
+DRT=1
+unit\ testing=1
+NFC=1
+DRY=1
+etcd\ etymology=1
 security\ testing=1
 NFS=1
 YubiKey=1
-throughput=1
 observability=1
-bad\ cohesion\ (DDD)=1
 streamline=1
-good\ cohesion\ (DDD)=1
-to\ prompt=1
 traverse=1
 DevOps=1
 namespace\ (networking)=1
-entity\ (database)=1
 continuous\ integration\ components=1
 retrieve=1
 JPA=1
@@ -80,51 +97,58 @@ Spring\ boot=1
 cohesion=1
 ubiquitous=1
 performance\ testing=1
-regression\ testing=1
 semantic\ registration\ message=1
-garbage\ collection=1
 VPN\ whitelisting=1
-asynchronous=1
 object\ mapping\ (database)=1
-heap\ space=1
-JDBC=1
-defensive\ programming=1
-subsetting\ data=1
+asynchronous=1
 collision\ resistant=1
 REST=1
 API=1
 JPA\ responsibilities=1
 CTO=1
 vague=2
-encapsulation=2
 synchronous=2
 container\ image=2
 usability\ testing=2
 functional\ testing=2
+sticky\ session\ benefit=2
+bad\ separation\ of\ concerns\ (DDD)=2
+RESTful\ layers=2
+domain=2
+justified\ vs\ excusable=2
+worker\ node=2
+bounded\ context\ (example\ of\ user\ management)=2
+deploying=2
+proxy\ pattern=2
+F5=2
+VIP\ (OpenShift)=2
+feature\ flag=2
+coupling\ (noun)\ (software)=2
+Ivy=2
+VPN=2
+OpenShift=2
+jar\ hell=2
+hub=2
+good\ separation\ of\ concerns\ (DDD)=2
+partition\ and\ sample=2
+encapsulation=2
 credential=2
 Kafka\ vs\ Kubernetes=2
-sticky\ session\ benefit=2
+code\ integration=2
 PV\ (containerisation)=2
-bad\ separation\ of\ concerns\ (DDD)=2
 obfuscate\ data=2
-RESTful\ layers=2
 integrity\ (of\ documents)=2
 web\ portal=2
-domain=2
 edge\ (graphs)=2
 stop\ word\ filtering=2
 microservice=2
 product\ backlog\ (agile)=2
-justified\ vs\ excusable=2
+Rancher\ platform=2
 RESTful\ client-server=2
 verbose=2
-worker\ node=2
-deploying=2
-bounded\ context\ (example\ of\ user\ management)=2
 CI/CD=2
 JPA\ entity\ management=2
 tampering=2
-proxy\ pattern=2
 canary\ deployment=2
 hashing=2
 to\ stash=2
@@ -135,54 +159,48 @@ backlog=2
 dispose=2
 IoC=2
 signup\ metadata=2
-feature\ flag=2
-coupling\ (noun)\ (software)=2
-Ivy=2
-VPN=2
-OpenShift=2
-jar\ hell=2
 NOT\ IN\ (SQL)=2
 TDM=2
+stereotype\ in\ Spring=2
 Spring\ beans=2
 test\ data\ management\ for\ enterprise=2
-hub=2
 Agile\ Test\ Quadrants=2
-partition\ and\ sample=2
 OKR=2
 on-premises\ datacenter=2
 due\ diligence=3
 dispose\ of\ memory=3
-PII=3
 DPIA=3
 integrated\ test\ environment=3
 port=3
 XSS=3
+PII=3
 paradigm=3
 stakeholder=4
-present()\ (Fluentlenium)=4
-accessibility\ testing=4
-abstract\ class=4
 Docker=4
 JSP=4
-thoroughness=4
 master\ node=4
 PPTE=4
 penetration\ testing=4
 WoW=4
 suite=4
-fetch=4
 technical\ debt=4
-Azure=4
 bounded=4
-infer=4
-pseudonym=4
 dispose\ of\ a\ list=4
 throttling=4
-outdegree=4
 deduce=4
-CTE\ (sandbox)=4
 git\ stash=4
+present()\ (Fluentlenium)=4
+accessibility\ testing=4
+abstract\ class=4
+thoroughness=4
+fetch=4
+servlet\ vs\ controller=4
+Azure=4
+infer=4
+pseudonym=4
+outdegree=4
+CTE\ (sandbox)=4
 runtime=5
-CFT\ (context\:\ company\ structure)=8
 greedy\ solution=8
 interface=8
+CFT\ (context\:\ company\ structure)=8
