--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,14 +1,15 @@
-servlet\ container=-3
-JSX=-1
-IMDG=-1
-component\ scanning=-1
+servlet\ container=-1
 proprietary=-1
 compatibility\ testing=-1
+dispatcher=-1
+DGOM=-1
+undirected\ graph=-1
+component\ scanning=1
 cluster=1
 tamper=1
-PR=1
-metadata=1
 CDD=1
+metadata=1
+PR=1
 base\ (math)=1
 aspect\ oriented\ programming=1
 Rancher\ features=1
@@ -24,12 +25,12 @@ Hungarian\ pollution=1
 pod=1
 .war\ file=1
 credential\ examples=1
-RESTful\ data\ formats=1
-container\ management\ platform=1
 aspect=1
+container\ management\ platform=1
+RESTful\ data\ formats=1
 Wireshark=1
-error\ budget=1
 bounded\ context=1
+error\ budget=1
 cloud\ platform=1
 gateway\ team=1
 DC=1
@@ -99,13 +100,15 @@ ubiquitous=1
 performance\ testing=1
 semantic\ registration\ message=1
 VPN\ whitelisting=1
-object\ mapping\ (database)=1
 asynchronous=1
+object\ mapping\ (database)=1
 collision\ resistant=1
 REST=1
 API=1
 JPA\ responsibilities=1
 CTO=1
+hash\ use\ cases=1
+DBA=1
 vague=2
 synchronous=2
 container\ image=2
@@ -167,6 +170,10 @@ test\ data\ management\ for\ enterprise=2
 Agile\ Test\ Quadrants=2
 OKR=2
 on-premises\ datacenter=2
+operational\ risk=2
+container=2
+customer\ data\ domain=2
+OpenShift\ vs\ Kubernetes?=2
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
