master: specified keys

--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,10 +1,8 @@
-servlet\ container=-1
-proprietary=-1
-compatibility\ testing=-1
-dispatcher=-1
-DGOM=-1
-undirected\ graph=-1
-component\ scanning=1
+proprietary=-2
+undirected\ graph=-2
+DGOM=-2
+ORM=-1
+custody=-1
 cluster=1
 tamper=1
 CDD=1
@@ -48,6 +46,7 @@ bad\ cohesion\ (DDD)=1
 good\ cohesion\ (DDD)=1
 to\ prompt=1
 entity\ (database)=1
+component\ scanning=1
 regression\ testing=1
 garbage\ collection=1
 heap\ space=1
@@ -78,6 +77,7 @@ facility=1
 Unix=1
 Java\ EE=1
 subnet=1
+DBA=1
 DRT=1
 unit\ testing=1
 NFC=1
@@ -105,10 +105,11 @@ object\ mapping\ (database)=1
 collision\ resistant=1
 REST=1
 API=1
+hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
-hash\ use\ cases=1
-DBA=1
+life\ cycle\ management=1
+build=1
 vague=2
 synchronous=2
 container\ image=2
@@ -118,6 +119,7 @@ sticky\ session\ benefit=2
 bad\ separation\ of\ concerns\ (DDD)=2
 RESTful\ layers=2
 domain=2
+customer\ data\ domain=2
 justified\ vs\ excusable=2
 worker\ node=2
 bounded\ context\ (example\ of\ user\ management)=2
@@ -134,6 +136,7 @@ jar\ hell=2
 hub=2
 good\ separation\ of\ concerns\ (DDD)=2
 partition\ and\ sample=2
+container=2
 encapsulation=2
 credential=2
 Kafka\ vs\ Kubernetes=2
@@ -145,6 +148,7 @@ web\ portal=2
 edge\ (graphs)=2
 stop\ word\ filtering=2
 microservice=2
+operational\ risk=2
 product\ backlog\ (agile)=2
 Rancher\ platform=2
 RESTful\ client-server=2
@@ -162,6 +166,7 @@ backlog=2
 dispose=2
 IoC=2
 signup\ metadata=2
+OpenShift\ vs\ Kubernetes?=2
 NOT\ IN\ (SQL)=2
 TDM=2
 stereotype\ in\ Spring=2
@@ -170,10 +175,8 @@ test\ data\ management\ for\ enterprise=2
 Agile\ Test\ Quadrants=2
 OKR=2
 on-premises\ datacenter=2
-operational\ risk=2
-container=2
-customer\ data\ domain=2
-OpenShift\ vs\ Kubernetes?=2
+compatibility\ testing=3
+servlet\ container=3
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
